tests/requests/invalid/chunked_12.py
from gunicorn.http.errors import ChunkMissingTerminator
request = ChunkMissingTerminator
